--- a/src/app/send-mail/send-mail.component.html
+++ b/src/app/send-mail/send-mail.component.html
@@ -2,9 +2,14 @@
 
 <div class="container">
 
+    <h1 class="text-3xl font-bold underline">
+        Hello world!
+    </h1>
+
+
     <mat-card appearance="outlined" class="transparent-card">
         <mat-card-header>
-            <mat-card-title> Australian Shepherd</mat-card-title>
+            <mat-card-title class="text-8xl"> Australian Shepherd</mat-card-title>
             <mat-card-subtitle>Herding group</mat-card-subtitle>
         </mat-card-header>
 
